[package]
name = "gradle-wiper"
version = "0.2.0"
edition = "2021"
authors = ["ubiratan.f.soares@gmail.com"]
description = "Reclaim machine resources (RAM, Disk) attached to Gradle builds "
repository = "https://github.com/dotanuki-labs/gradle-wiper"
readme = "README.md"
license = "MIT"
publish = true
categories = ["command-line-utilities"]
keywords = ["utilities", "gradle", "clean-up", "android"]

[package.metadata]
msrv = "1.78.0"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
directories = "6.0.0"
human-panic = "2.0.0"
better-panic = "0.3.0"
itertools = "0.14.0"
walkdir = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
ubyte = "0.10.4"
cached = "0.54.0"
env_logger = { version = "0.11.3", features = ["color"]}
log = "0.4.21"
whoami = "1.5.1"
rust-strings = "0.6.0"
sysinfo = "0.33.0"

[dev-dependencies]
fake = "=3.0.0"
temp-dir = "=0.1.13"

[profile.release]
strip = true
lto = true
codegen-units = 1
