# Copyright 2025 Dotanuki Labs
# SPDX-License-Identifier: MIT

[package]
name = "gradle-wiper"
version = "0.2.0"
edition = "2024"
authors = ["ubiratan.f.soares@gmail.com"]
description = "Reclaim machine resources (RAM, Disk) attached to Gradle builds "
repository = "https://github.com/dotanuki-labs/gradle-wiper"
readme = "README.md"
license = "MIT"
publish = true
categories = ["command-line-utilities"]
keywords = ["utilities", "gradle", "clean-up", "android"]

[package.metadata]
msrv = "1.89.0"

[dependencies]
anyhow = "=1.0.100"
clap = { version = "=4.5.54", features = ["derive"] }
comfy-table = "=7.2.2"
directories = "6.0.0"
human-panic = "=2.0.6"
better-panic = "=0.3.0"
itertools = "=0.14.0"
walkdir = "=2.5.0"
uuid = { version = "=1.20.0", features = ["v4"] }
ubyte = "=0.10.4"
cached = "=0.56.0"
env_logger = { version = "=0.11.8", features = ["color"]}
log = "=0.4.29"
whoami = "=2.0.2"
rust-strings = "0.6.0"
sysinfo = "0.38.0"

[dev-dependencies]
fake = "=4.4.0"
temp-dir = "=0.1.16"

[profile.release]
strip = true
lto = true
codegen-units = 1
